Making images not be hidden under scroll bar in game room chat. Adding callback function to linked images to scroll down to the bottom of the chat bar if the user was already scrolled down. Fixing the distance measurer not working in firefox.

--- a/tools/gameroom/gameroom.css
+++ b/tools/gameroom/gameroom.css
@@ -35,6 +35,8 @@
     max-height: calc( 100% - 166px);
     width: auto;
     height: auto;
+    padding-right: 24px;
+    /* moves image left of the scroll bar */
 }
 
 #createRoom,
